# spring2025

./: .gitignore  404.html  _config.yml  deploy-to-gh-pages.sh  feed.xml  index.html
_includes/: head.html  header.html  navigation.html  oops.html  page_activities.html  page_readings.html  page_title.html  project02c.md  schedule-very-simple.html  scripts.html  walkthrough-project02.html
_layouts/: assignments.html  default.html  module.html  schedule.html  schedule_bak.html  syllabus.html  topics.html  two-column-resources.html  two-column.html
_plugins/: custom_functions.rb  expandable_tag.rb
_sass/: minima.css  minima.scss
accessibility-reference/: index.html
activities/: ant-design.html  asyncio.html  git-in-class-activity.html  project01-setup.html  testing-activity.html
assets/: main.css
assignments/: index.html  lab01.html  lab02.html  lab03.html  lab04.html  lab05.html  lab06.html  lab07.html  lab08.html  lab09.html  lab10.html  lab11.html  project01.html  project02.html  project02a.html  project02b.html  project02c.html
course-files/labs/lab05/src/: pyproject.toml  server.py  test_server.py
course-files/labs/lab05/src/asyncio-exercises/: demo1_coroutine.py  demo2_two_coroutines.py  demo3_file_io.py  demo4_remote_data.py  demo5_api_tutor.py  example.txt
course-files/labs/lab05/src/ui/css/: styles.css
exams/: exam01.html  exam02.html
lectures/: deadline01.html  holiday01.html  holiday02.html  topic01.html  topic02.html  topic03.html  topic04.html  topic05.html  topic06.html  topic07.html  topic08.html  topic09.html  topic10.html  (+2 more)
(+105 files in other folders)
