[tool.poetry]
name = "csci338app"
version = "0.0.0"
description = "App for CSCI338"
authors = ["Semmy Purewal <semmypurewal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
aiohttp = "^3.8.5"
aiofiles = "^23.2.1"
httpx = "^0.25.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
